--- a/Exercicios/ex001/index.html
+++ b/Exercicios/ex001/index.html
@@ -11,5 +11,6 @@
     <p>Esse é meu primeiro documento HTML! Estou muito feliz!</p>
     <p>Este é um momento unico! estou criando um site</p>
     <img src=" alt="">
+    <h1>Ola mundo</h1>
 </body>
 </html>
